[tool.poetry]
name = "dosei"
version = "0.0.18a4"
description = "Dosei Python SDK"
authors = ["Alvaro Molina <am@dosei.ai>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
dosei = 'dosei.main:cli'

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
pytest-trio = "^0.8.0"
click = "^8.1.7"
croniter = "^2.0.1"
pydantic = "^2.6.1"
dosei-util = "^0.0.13"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
  "--disable-pytest-warnings",
  "-s"
]
