[tool.poetry]
name = "dosei-sdk"
version = "0.0.20"
description = "Dosei Python SDK"
authors = ["Alvaro Molina <am@dosei.ai>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
croniter = "^2.0.1"
pydantic = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest-trio = "^0.8.0"
fastapi = "^0.109.2"
pytest = "^7.4.3"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
  "--disable-pytest-warnings",
  "-s"
]
